# PowerfulClient

./: .gitignore  CMakeLists.txt  README.md  StdAfx.h
DuiLibHeaders/: CMakeLists.txt
DuiLibHeaders/Control/: CMakeLists.txt
DuiLibLibs/: DuiLib_d.exp  DuiLib_d.lib
MainFrame/: CMakeLists.txt  SkinManager.h
